--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,10 @@
         <link rel="stylesheet" href="app.css">
     </head>
     <body ng-app="MyApp">
-        <p>{{"Hello" +" world!"}}</p>
+        <label>Name:</label>
+        <input type="text" ng-model="yourName" placeholder="Enter a name here">
+        <hr>
+        <h1>Hello {{yourName}}!</h1>
         <script src="vendor.js"></script>
         <script src="app.js"></script>
     </body>
