--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
         <input type="text" ng-model="yourName" placeholder="Enter a name here">
         <hr>
         <h1>Hello {{yourName}}!</h1>
-        <script src="vendor.js"></script>
-        <script src="app.js"></script>
+        <script src="scripts/vendor.js"></script>
+        <script src="scripts/app.js"></script>
     </body>
 </html>
